# Kubeli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json
.claude/skills/humanizer/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
scripts/: check-tauri-versions.mjs
src/: App.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: agent_manager.rs
src-tauri/src/app/: bootstrap.rs  plugins.rs  state.rs
src-tauri/src/app/command_registry/: mod.rs
src-tauri/src/app/setup/: deep_links.rs  mod.rs
src-tauri/src/app/tray/: mod.rs
src-tauri/src/commands/: argocd.rs  clusters.rs  helm.rs  metrics.rs  resources.rs
src-tauri/src/commands/clusters/: commands.rs
src-tauri/src/oidc/: commands.rs  config.rs  flow.rs  mod.rs  store.rs
src/components/features/dashboard/views/: ResourceView.tsx  _createResourceView.tsx
src/components/features/home/components/: ClusterGrid.tsx
src/components/features/resources/: ResourceDetail.tsx
src/components/features/resources/components/: ArgoCDHistoryTab.tsx
src/components/features/tray/: TrayPopup.tsx
src/components/layout/sidebar/: Sidebar.tsx  index.ts
src/components/layout/sidebar/components/: NavSectionCollapsible.tsx
src/components/layout/sidebar/hooks/: useSidebarUiState.ts
src/components/layout/sidebar/sections/: CustomResourcesSection.tsx
src/components/layout/sidebar/types/: constants.ts  types.ts
src/components/layout/tabbar/hooks/: useTabTitle.ts
src/components/ui/: calendar.tsx
src/i18n/messages/: de.json  en.json
src/lib/: custom-resources.ts
src/lib/__tests__/: custom-resources.test.ts
src/lib/hooks/: useUpdater.tsx
src/lib/hooks/k8s/resources/: extensions.ts  index.ts
src/lib/stores/: cluster-store.ts
src/lib/stores/__tests__/: cluster-store.test.ts  resource-store.test.ts
src/lib/tauri/: commands.ts  mock.ts
src/lib/tauri/commands/: app.ts  argocd.ts  oidc.ts  resources.ts
src/lib/tauri/commands/__tests__/: wrappers.test.ts
src/lib/types/: kubernetes.ts
web/: README.md  package.json
web/public/: manifest.json
web/src/components/: FAQSection.tsx
web/src/layouts/: BaseLayout.astro  ChangelogLayout.astro
web/src/pages/: changelog.mdx  index.astro
web/src/pages/compare/: dashboard-alternative.astro  k9s-alternative.astro  kubectl-alternative.astro  lens-alternative.astro
(+16 files in other folders)
